Add Cocoa/iOS Genstrings support
* Add an NSLocalizedString importer that scans for uses of the routine and
  imports them
* Better .find_by_ident methods for all classes that use idents
* Refactored printf-token-scanning into separate module

--- a/spec/fixtures/repository.git/config
+++ b/spec/fixtures/repository.git/config
@@ -1,7 +1,6 @@
 [core]
 	repositoryformatversion = 0
 	filemode = true
-	bare = false
-	logallrefupdates = true
+	bare = true
 	ignorecase = true
 	precomposeunicode = false
