--- a/config/environments/common/mailer.yml
+++ b/config/environments/common/mailer.yml
@@ -1,3 +1,3 @@
 ---
-from: your.sender@example.com #TODO input the default sender here
-translators_list: your.translator.list@example.com #TODO input the mailing list for your translators
+from: shuttle@squareup.com
+translators_list: l10n@squareup.com
