--- a/spec/fixtures/repository.git/config
+++ b/spec/fixtures/repository.git/config
@@ -1,7 +1,10 @@
 [core]
 	repositoryformatversion = 0
 	filemode = true
-	bare = false
-	logallrefupdates = true
+	bare = true
 	ignorecase = true
 	precomposeunicode = false
+[remote "origin"]
+	url = /Users/wenley/Development/shuttle/spec/fixtures/repository.git
+	fetch = +refs/*:refs/*
+	mirror = true
