Revert spec/fixtures to before Wenley's changes
Specifically, replacing the repository.git file
with a version that had NT examples for importing.

This is because the repo is no longer recognized
for an unknown/forgotten reason.

--- a/spec/fixtures/repository.git/config
+++ b/spec/fixtures/repository.git/config
@@ -1,10 +1,7 @@
 [core]
 	repositoryformatversion = 0
 	filemode = true
-	bare = true
+	bare = false
+	logallrefupdates = true
 	ignorecase = true
 	precomposeunicode = false
-[remote "origin"]
-	url = /Users/wenley/Development/shuttle/spec/fixtures/repository.git
-	fetch = +refs/*:refs/*
-	mirror = true
