--- a/config/database.yml
+++ b/config/database.yml
@@ -1,68 +1,22 @@
-# PostgreSQL. Versions 8.2 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On Mac OS X with macports:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
-development:
+common: &common
   adapter: postgresql
   encoding: unicode
+  username: shuttle
+
+development:
+  <<: *common
   database: shuttle_development
   pool: 30
-  username: shuttle
-  password:
   host: localhost
 
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
-  #port: 5432
-
-  # Schema search path. The server defaults to $user,public
-  #schema_search_path: myapp,sharedapp,public
-
-  # Minimum log levels, in increasing order:
-  #   debug5, debug4, debug3, debug2, debug1,
-  #   log, notice, warning, error, fatal, and panic
-  # The server defaults to notice.
-  #min_messages: warning
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  <<: *common
   database: shuttle_test
   pool: 10
-  username: shuttle
-  password:
   host: localhost
 
-<% db = YAML.load_file('/app/shuttle/shared/database.yml') rescue {} %>
-staging:
-  adapter: postgresql
-  host: <%= db['host'] %>
-  username: <%= db['user'] %>
-  password: <%= db['password'] %>
-  database: <%= db['database'] %>
-  pool: 30
-  timeout: 5000
-
 production:
-  adapter: postgresql
-  encoding: unicode
+  <<: *common
   database: shuttle_production
   pool: 30
-  username: shuttle
-  password:
-  host: ironweed.corp.squareup.com
+  host: localhost
