Try reenabling newrelic

--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -216,7 +216,7 @@ test:
 # incurring any user-visible performance degradation.
 production:
   <<: *default_settings
-  monitor_mode: false
+  monitor_mode: true
 
 # Many applications have a staging environment which behaves
 # identically to production. Support for that environment is provided
