--- a/config/environments/production/worker.yml
+++ b/config/environments/production/worker.yml
@@ -1,4 +1,4 @@
 ---
 default_url_options:
-  host: your.host.here #TODO input the default host for production
+  host: shuttle.squareup.com
   protocol: https
