--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ before_install:
 - sudo apt-get install -qq libarchive-dev
 - psql -c 'create database travis_ci_test;' -U postgres
 - cp config/database.travis.yml config/database.yml
+- git --git-dir=spec/fixtures/repository.git init --bare
 addons:
   postgresql: '9.3'
 services:
