--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 before_install:
-- sudo apt-get install -qq libarchive-dev
+- sudo apt-get install -qq libarchive-dev tidy
 - psql -c 'create database travis_ci_test;' -U postgres
 - cp config/database.travis.yml config/database.yml
 - git --git-dir=spec/fixtures/repository.git init --bare
