--- a/config/environments/development/paperclip.yml
+++ b/config/environments/development/paperclip.yml
@@ -1,1 +1,1 @@
-path: “:rails_root/public/:attachment/:id/:style/:basename.:extension”
+path: ":rails_root/public/:attachment/:id/:style/:basename.:extension"
