--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ common: &common
   adapter: postgresql
   encoding: unicode
   username: shuttle
-  timeout: 10000 # this is set to a high number for debugging purposes. should be reduced in the future
+  timeout: 300 # (in seconds)
 
 development:
   <<: *common
