Create a configuration for feedback link

--- a/config/environments/common/app.yml
+++ b/config/environments/common/app.yml
@@ -3,13 +3,16 @@
 # After a user signs up and confirms their email address, he will automatically get 'monitor' access
 # if his email is from one of the domains listed here. We recommend putting in your company email
 # domain here if you trust them and don't want to have to manually activate users from within the company.
-domains_to_get_monitor_role_after_email_confirmation: TODO
+domains_to_get_monitor_role_after_email_confirmation: "TODO"
 
 # Will be used to determine if the current user can use the autofill feature
-domains_who_can_search_users: ['squareup.com']
+domains_who_can_search_users: ["TODO"]
 
 # Will be used to determine the url of a commit
-github_enterprise_domain: "git.squareup.com"
+github_enterprise_domain: "TODO"
 
 # Will be used to determine the url of a commit
-stash_domain: TODO
+stash_domain: "TODO"
+
+# Will be linked to in the footer to give users a way to provide feedback to the engineers running Shuttle
+feedback_link: "TODO"
