--- a/config/environments/common/app.yml
+++ b/config/environments/common/app.yml
@@ -13,3 +13,6 @@ github_enterprise_domain: "git.squareup.com"
 
 # Will be used to determine the url of a commit
 stash_domain: "stash.corp.squareup.com"
+
+# Will be linked to in the footer to give users a way to provide feedback to the engineers running Shuttle
+feedback_link: "https://jira.corp.squareup.com/secure/CreateIssueDetails!init.jspa?pid=12827&issuetype=6"
