--- a/config/environments/common/mailer.yml
+++ b/config/environments/common/mailer.yml
@@ -1,3 +1,3 @@
 ---
-from: shuttle-engineering@squareup.com
-translators_list: l10n@squareup.com
+from: shuttle-team@example.com
+translators_list: translators@example.com
