--- a/config/environments/staging/squash.yml
+++ b/config/environments/staging/squash.yml
@@ -1,4 +1,6 @@
 ---
-revision_file: /app/shuttle/current/REVISION
 disabled: false
+api_host: "https://squash.example.com"
+api_key: YOUR.API.KEY
+revision_file: /app/shuttle/current/REVISION
 skip_ssl_verification: true
