--- a/config/environments/production/app.yml
+++ b/config/environments/production/app.yml
@@ -1,4 +1,16 @@
 ---
+# Used for creating urls in mailers and other places
 default_url_options:
   host: shuttle.example.com
   protocol: https
+
+# Used in setting `config.cache_store` in production.rb
+cache_store:
+  type: :redis_store
+  endpoint: redis://ironweed.corp.squareup.com:6379/0/shuttle_rails
+
+# Used in setting `config.action_dispatch.rack_cache` in production.rb
+action_dispatch:
+  rack_cache:
+    metastore: redis://ironweed.corp.squareup.com:6379/0/metastore
+    entitystore: redis://ironweed.corp.squareup.com:6379/0/entitystore
