Simplify and consolidate config files, v2

--- a/config/environments/common/app.yml
+++ b/config/environments/common/app.yml
@@ -3,21 +3,21 @@
 # After a user signs up and confirms their email address, he will automatically get 'monitor' access
 # if his email is from one of the domains listed here. We recommend putting in your company email
 # domain here if you trust them and don't want to have to manually activate users from within the company.
-domains_to_get_monitor_role_after_email_confirmation: ['example.com']
+domains_to_get_monitor_role_after_email_confirmation: ['squareup.com']
 
 # Will be used to determine if the current user can use the autofill feature
-domains_who_can_search_users: ['example.com']
+domains_who_can_search_users: ['squareup.com']
 
 # Will be used to determine the url of a commit
-github_enterprise_domain: "git.example.com"
+github_enterprise_domain: "git.squareup.com"
 
 # Will be used to determine the url of a commit
-stash_domain: "stash.example.com"
+stash_domain: "stash.corp.squareup.com"
 
 # Will be linked to in the footer to give users a way to provide feedback to the engineers running Shuttle
-feedback_link: "https://jira.example.com"
+feedback_link: "https://jira.corp.squareup.com/secure/CreateIssueDetails!init.jspa?pid=12827&issuetype=6"
 
 # Will be used for email-related things
 mailer:
-  from: shuttle-team@example.com
-  translators_list: translators@example.com
+  from: shuttle-engineering@squareup.com
+  translators_list: l10n@squareup.com
