--- a/config/environments/production/app.yml
+++ b/config/environments/production/app.yml
@@ -1,7 +1,7 @@
 ---
 # Used for creating urls in mailers and other places
 default_url_options:
-  host: shuttle.example.com
+  host: shuttle.squareup.com
   protocol: https
 
 # Used in setting `config.cache_store` in production.rb
