--- a/config/environments/staging/app.yml
+++ b/config/environments/staging/app.yml
@@ -4,6 +4,10 @@ default_url_options:
   host: shuttle-stage-a-01.corp.squareup.com
   protocol: https
 
+# The value of Shuttle::Application.config.secret_key_base in initializers/secret_token.rb
+cookies:
+  secret_key_base: THIS.WILL.BE.USED.TO.VERIFY.INTEGRITY.OF.SIGNED.COOKIES
+
 # Used in setting `config.cache_store` in staging.rb
 cache_store:
   type: :redis_store
