Pull the capistrano repo_url to a config file

--- a/config/environments/common/app.yml
+++ b/config/environments/common/app.yml
@@ -1,5 +1,9 @@
 # Use this file to define application specific settings / constants
 
+# Capistrano will deploy the repo from this url. This is not environment specific.
+# For ex: it will not be read from production/app.yml.
+repo_url: https://stash.corp.squareup.com/scm/intl/shuttle.git
+
 # After a user signs up and confirms their email address, he will automatically get 'monitor' access
 # if his email is from one of the domains listed here. We recommend putting in your company email
 # domain here if you trust them and don't want to have to manually activate users from within the company.
