--- a/config/environments/staging/app.yml
+++ b/config/environments/staging/app.yml
@@ -1,7 +1,7 @@
 ---
 # Used for creating urls in mailers and other places
 default_url_options:
-  host: shuttle-stage-a-01.corp.squareup.com
+  host: shuttle-stage.corp.squareup.com
   protocol: https
 
 # The value of Shuttle::Application.config.secret_key_base in initializers/secret_token.rb
