Support remote services during development
Remote services can be configured with the following environment variables:
- DATABASE_HOST
- ELASTICSEARCH_URL
- REDIS_URL
- SMTP_HOST

Additionally this change disables the redirect to default URL in config/routes.rb.

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 common: &common
   adapter: postgresql
   encoding: unicode
-  host: localhost
+  host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
   username: shuttle
   password:
   pool: 50
