Bring GitHub Shuttle in line with Square-internal Shuttle, prior to the Rails 4.2.10 upgrade. GitHub Shuttle is now code-identical to internal Shuttle except:
* GlobalSight integration
* Square-specific deploy configuration
* Square's internal gem mirror
* Square-specific Sentry integration

From now on we can do development here and merge it back into the internal repo.

--- a/config/environments/production/app.yml
+++ b/config/environments/production/app.yml
@@ -15,10 +15,10 @@ devise:
 # Used in setting `config.cache_store` in production.rb
 cache_store:
   type: :redis_store
-  endpoint: redis://shuttle-redis.example.com:PORT/0/shuttle_rails
+  endpoint: redis://shuttle-redis.example.com:PORT/0/shuttle_cache
 
 # Used in setting `config.action_dispatch.rack_cache` in production.rb
 action_dispatch:
   rack_cache:
-    metastore: redis://shuttle-redis.example.com:PORT/0/shuttle_rails
-    entitystore: redis://shuttle-redis.example.com:PORT/0/shuttle_rails
+    metastore: redis://shuttle-redis.example.com:PORT/0/shuttle_meta
+    entitystore: redis://shuttle-redis.example.com:PORT/0/shuttle_entity
