--- a/config/environments/staging/app.yml
+++ b/config/environments/staging/app.yml
@@ -12,13 +12,13 @@ cookies:
 devise:
   secret_key: THIS.WILL.BE.USED.TO.GENERATE.RANDOM.DEVISE.TOKENS
 
-# Used in setting `config.cache_store` in production.rb
+# Used in setting `config.cache_store` in staging.rb
 cache_store:
   type: :redis_store
-  endpoint: redis://localhost:6379/0/entitystore
+  endpoint: redis://localhost:6379/0/shuttle_cache
 
-# Used in setting `config.action_dispatch.rack_cache` in production.rb
+# Used in setting `config.action_dispatch.rack_cache` in staging.rb
 action_dispatch:
   rack_cache:
-    metastore: redis://localhost:6379/0/entitystore
-    entitystore: redis://localhost:6379/0/entitystore
+    metastore: redis://localhost:6379/0/shuttle_meta
+    entitystore: redis://localhost:6379/0/shuttle_entity
