Square-specific Shuttle modifications
* Sentry bug reporting
* Square-specific deploy configuration
* Square-specific Redis and ElasticSearch IPs
* Square SSL certificates in Docker
* Square gem mirror
* Add no_proxy to avoid proxying corp requests
* Kochiku CI script

--- a/config/environments/common/automatic_user_privileges.yml
+++ b/config/environments/common/automatic_user_privileges.yml
@@ -1,7 +1,7 @@
 # After a user signs up and confirms their email address, he will automatically get 'monitor' access
 # if his email is from one of the domains listed here. We recommend putting in your company email
 # domain here if you trust them and don't want to have to manually activate users from within the company.
-domains_to_get_monitor_role_after_email_confirmation: ['example.com']
+domains_to_get_monitor_role_after_email_confirmation: ['squareup.com']
 
 # Will be used to determine if the current user can use the autofill feature
-domains_who_can_search_users: ['example.com']
+domains_who_can_search_users: ['squareup.com']
