--- a/config/environments/common/mailer.yml
+++ b/config/environments/common/mailer.yml
@@ -1,2 +1,2 @@
-from: shuttle-engineers@example.com
-translators_list: translators@example.com
+from: shuttle-engineering@squareup.com
+translators_list: l10n@squareup.com
