--- a/config/environments/common/git.yml
+++ b/config/environments/common/git.yml
@@ -1,4 +1,4 @@
 # The author info that will be used when Shuttle is updating the touchdown branch, i.e. when pushing manifest file
 author:
   name: Shuttle
-  email: shuttle-noreply@example.com
+  email: shuttle-noreply@squareup.com
