--- a/config/environments/common/services.yml
+++ b/config/environments/common/services.yml
@@ -1,8 +1,8 @@
 # Will be used to determine the url of a commit
-github_enterprise_domain: "git.example.com"
+github_enterprise_domain: "git.squareup.com"
 
 # Will be used to determine the url of a commit
-stash_domain: "stash.example.com"
+stash_domain: "stash.corp.squareup.com"
 
 # Will be linked to in the footer to give users a way to provide feedback to the engineers running Shuttle
-feedback_link: "https://jira.example.com"
+feedback_link: "https://jira.corp.squareup.com/secure/CreateIssueDetails!init.jspa?pid=12827&issuetype=6"
