Add newer, better, actually working Docker configuration

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
-.bundle
-.git
-log/*
-tmp/cache/*
-tmp/pids/*
-tmp/repos/*
-tmp/sessions/*
-tmp/sockets/*
-tmp/working_repos/*
-.validation
+/.bundle
+/.git
+/log/*
+/tmp/cache/*
+/tmp/pids/*
+/tmp/repos/*
+/tmp/sessions/*
+/tmp/sockets/*
+/tmp/working_repos/*
+/.validation
