--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,28 @@
-language: ruby
-
+sudo: false
+addons:
+  apt:
+    packages:
+      - cmake
+      - libarchive-dev
+      - tidy
+  postgresql: '9.6'
 services:
-- docker
-
+  - postgresql
+  - redis
+language: ruby
+rvm:
+  - 2.3.1
+cache: bundler
+env:
+  - RAILS_ENV=test
 before_install:
-- docker-compose -f docker-compose.test.yml build
-
+  - curl -O https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.2.1.deb && sudo dpkg -i --force-confnew elasticsearch-1.2.1.deb && sudo service elasticsearch restart
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - cp config/database.travis.yml config/database.yml
+  - git --git-dir=spec/fixtures/repository.git init --bare
 script:
-- docker-compose -f docker-compose.test.yml run tests bin/docker-tests
+  - bundle exec rake db:test:prepare
+  - bundle exec rake environment elasticsearch:import:model FORCE=y CLASS=Commit
+  - bundle exec rake environment elasticsearch:import:model FORCE=y CLASS=Key
+  - bundle exec rake environment elasticsearch:import:model FORCE=y CLASS=Translation
+  - bundle exec rspec
