--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,12 +1,12 @@
 ---
-version: '2'
+version: '3'
 services:
   postgresql:
     image: postgres:9.4
     environment:
-    - POSTGRES_USER=shuttle
-    - POSTGRES_PASSWORD=
-    - POSTGRES_DB=shuttle_test
+      - POSTGRES_USER=shuttle
+      - POSTGRES_PASSWORD=
+      - POSTGRES_DB=shuttle_test
 
   redis:
     image: redis
@@ -15,21 +15,24 @@ services:
     image: quay.io/trackmaven/elasticsearch:1.7
 
   tests:
-    build: .
+    build:
+      context: .
+      args:
+        - BUNDLE_GEMS__CONTRIBSYS__COM
     links: &links
-    - postgresql
-    - postgresql:postgresql.shuttle.local
-    - redis
-    - redis:redis.shuttle.local
-    - elasticsearch
-    - elasticsearch:elasticsearch.shuttle.local
+      - postgresql
+      - postgresql:postgresql.shuttle.local
+      - redis
+      - redis:redis.shuttle.local
+      - elasticsearch
+      - elasticsearch:elasticsearch.shuttle.local
     environment: &environment
-    - RAILS_ENV=test
-    - RACK_ENV=test
-    - SHUTTLE_DB_HOST=postgresql.shuttle.local
-    - SHUTTLE_REDIS_HOST=redis.shuttle.local
-    - 'SHUTTLE_ES_URL=elasticsearch.shuttle.local:9200'
-    - SHUTTLE_MAIL_HOST=mail.shuttle.local
+      - RAILS_ENV=test
+      - RACK_ENV=test
+      - SHUTTLE_DB_HOST=postgresql.shuttle.local
+      - SHUTTLE_REDIS_HOST=redis.shuttle.local
+      - SHUTTLE_ES_URL=elasticsearch.shuttle.local:9200
+      - SHUTTLE_MAIL_HOST=mail.shuttle.local
 
 #  worker:
 #    build: .
