* Restore per-host Rugged credentials * Remove stash.yml * Config files now specify which host the WebhookPinger uses

--- a/config/environments/common/credentials.yml
+++ b/config/environments/common/credentials.yml
@@ -1,4 +1,4 @@
 ---
-stash.example.com:
-  username:
-  password:
+bitbucket.example.com:
+  username: YOUR.INTERNAL.REPO.CREDENTIALS
+  password: YOUR.INTERNAL.REPO.CREDENTIALS
