Set sidekiq timeout to 50 seconds
The default timeout is just 8 seconds

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,6 +1,11 @@
 ---
 :verbose: true
 :concurrency: 8
+
+# Sidekiq's default timeout is just 8 seconds. Set higher value to give
+# Shuttle's long running jobs more time.
+:timeout: 50
+
 :queues:
   - [high, 10]
   - [low, 1]
