Added translation date to the report

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ common: &common
 
 development:
   <<: *common
-  database: shuttle_square
+  database: shuttle_development
 
 test:
   <<: *common
